--- a/style.css
+++ b/style.css
@@ -4862,10 +4862,10 @@ max-width:100%;}
 margin:inherit;}
 .ttr_uniform
 {
-max-width:100% !important;height:auto !important;}
+max-width:90% !important;height:auto !important;}
 .post_column .html_content ol, .post_column .html_content ul
 {
-margin-left: 25px;}
+margin-left: 10px;}
 .post_column .html_content ol li, .post_column .html_content ul li 
 {
 padding-left: 5px !important;text-indent: 0 !important;}
@@ -4941,7 +4941,7 @@ height:85px;
 }
  .ttr_footer_bottom_footer_inner
 {
-height:144px;
+height:120px;
 }
  .ttr_footer_bottom_footer_inner, #ttr_footer_top_for_widgets 
 {
@@ -6322,8 +6322,8 @@ margin-left:0px;
 margin-right:0px;
 margin-bottom:0px;
 padding-top:0px;
-padding-left:50px;
-padding-right:50px;
+padding-left:30px;
+padding-right:2px;
 padding-bottom:0px;
 box-sizing:content-box}
  ul.navbar-nav .dropdown-menu, ul.navbar-nav .sub-menu, ul.navbar-nav .collapse li a  
@@ -6416,14 +6416,14 @@ visibility: visible;
 display:block;
 font-size:14px;
 font-family:"Arial";
-font-weight:400;
+font-weight:1000;
 font-style:normal;
 color:#ffffff;
 text-shadow:none;
 text-align:left;
 text-decoration:none;
 text-transform:none;
-min-width:160px;
+min-width:100px;
 border-radius:0px 0px 0px 0px;
 border:solid transparent;
 border:solid rgba(0,0,0,0);
@@ -6435,7 +6435,7 @@ margin-left:0px;
 margin-right:0px;
 margin-bottom:0px;
 padding-top:0px;
-padding-left:20px;
+padding-left:5px;
 padding-right:0px;
 padding-bottom:0px;
 background-color:#FFFFFF;
@@ -13905,4 +13905,27 @@ img {
   background-image: url("images/grad.jpeg");
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+.appendixbutton{
+  display: inline-block;
+  padding: 20px 20px;
+    text-align: center;
+    text-decoration: none;
+    
+  height: 175px;
+  width: 215px;
+  color: #ffffff;
+    background-color: #ebebebad;
+    border-radius: 6px;
+
+    
+    box-shadow: 
+    0.3em 0.3em 0 0 var(--color),
+    inset 0.3em 0.3em 0 0 var(--color);
+
+}
+.appendixbutton:hover,
+.appendixbutton:focus {
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.55em);
 }
