--- a/style.css
+++ b/style.css
@@ -1492,7 +1492,7 @@ width:auto;
 }
 .Services header#ttr_header 
 {
-background:url(images/ServicesDesktopheader.jpg);
+background:url(images/header.gif);
 background-color:#FFFFFF;
 background-repeat:no-repeat;
 background-size:cover;
@@ -6812,8 +6812,8 @@ display:none;
  header#ttr_header 
 {
   position: relative;
-  /* display: flex; */
-/* background:url(images/HCI.jpg); */
+  display: flex;
+background:url(images/header.gif);
 background-color:#FFFFFF;
 background-repeat:no-repeat;
 background-size:cover;
@@ -13511,12 +13511,13 @@ margin:0 0 0 0;
 }
  .ttr_footer-widget-cell_inner0
 {
-padding:60px 40px 40px 40px;
+padding:20px 40px 40px 40px;
 }
 #ttr_footer .container 
 {
 width:100%;
 max-width:100%;
+/* background-image: url("images/grad.jpeg"); */
 background-image: url("images/grad.jpeg");
 background-position: center center;
 background-repeat: no-repeat;
@@ -13524,7 +13525,7 @@ background-size: cover;
 }
  #ttr_footer_designed_by_links 
 {
-top:12.5px;
+top:.5px;
 position:absolute;
 z-index:498;
 margin:auto;
@@ -13539,7 +13540,7 @@ margin:0 0 0 0;
 }
  .ttr_footer-widget-cell_inner0
 {
-padding:60px 20px 40px 20px;
+padding:20px 60px 20px 20px;
 }
 #ttr_footer_designed_by_links #ttr_footer_designed_by 
 {
@@ -13929,3 +13930,101 @@ img {
   box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
   transform: translateY(-0.55em);
 }
+
+.tabbable-panel {
+  /* border:px solid #eee; */
+  padding: 10px;
+}
+
+/* Default mode */
+.tabbable-line > .nav-tabs {
+  border: none;
+  margin: 0px;
+}
+.tabbable-line > .nav-tabs > li {
+  margin-right: 2px;
+}
+.tabbable-line > .nav-tabs > li > a {
+  border: 0;
+  margin-right: 0;
+  color: #737373;
+}
+.tabbable-line > .nav-tabs > li > a > i {
+  color: #a6a6a6;
+}
+.tabbable-line > .nav-tabs > li.open, .tabbable-line > .nav-tabs > li:hover {
+  border-bottom: 4px solid #b7f8ed;
+}
+.tabbable-line > .nav-tabs > li.open > a, .tabbable-line > .nav-tabs > li:hover > a {
+  border: 0;
+  background: none !important;
+  color: #333333;
+}
+.tabbable-line > .nav-tabs > li.open > a > i, .tabbable-line > .nav-tabs > li:hover > a > i {
+  color: #a6a6a6;
+}
+.tabbable-line > .nav-tabs > li.open .dropdown-menu, .tabbable-line > .nav-tabs > li:hover .dropdown-menu {
+  
+  margin-top: 0px;
+}
+.tabbable-line > .nav-tabs > li.active {
+  border-bottom: 4px solid #006363;
+  
+  position: relative;
+}
+.tabbable-line > .nav-tabs > li.active > a {
+  border: 0;
+  color: #333333;
+}
+.tabbable-line > .nav-tabs > li.active > a > i {
+  color: #404040;
+}
+.tabbable-line > .tab-content {
+  margin-top: -3px;
+  background-color: #fff;
+  border: 0;
+  border-top: 1px solid #eee;
+  padding: 15px 0;
+}
+.portlet .tabbable-line > .tab-content {
+  padding-bottom: 0;
+}
+
+/* Below tabs mode */
+
+.tabbable-line.tabs-below > .nav-tabs > li {
+  border-top: 4px solid transparent;
+}
+.tabbable-line.tabs-below > .nav-tabs > li > a {
+  margin-top: 0;
+}
+.tabbable-line.tabs-below > .nav-tabs > li:hover {
+  border-bottom: 0;
+  border-top: 4px solid #fbcdcf;
+  /* background-image: url("images/grad.jpeg");
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent; */
+}
+.tabbable-line.tabs-below > .nav-tabs > li.active {
+  margin-bottom: -2px;
+  border-bottom: 0;
+  border-top: 4px solid #f3565d;
+}
+.tabbable-line.tabs-below > .tab-content {
+  margin-top: -10px;
+  border-top: 0;
+  border-bottom: 1px solid #eee;
+  /* padding-bottom: 15px; */
+}
+.nav-tabs > li, .nav-pills > li {
+    float:none;
+    display:inline-block;
+    *display:inline;
+     zoom:1;
+}
+
+.nav-tabs, .nav-pills {
+    text-align:center;
+}
+
+tab1 { padding-left: 4em; }
