--- a/style.css
+++ b/style.css
@@ -6813,7 +6813,7 @@ display:none;
 {
   position: relative;
   display: flex;
-background:url(images/header.gif);
+background:url(images/video.gif);
 background-color:#FFFFFF;
 background-repeat:no-repeat;
 background-size:cover;
